--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "bootstrap": "^5.3.2",
+    "flowbite-react": "^0.7.2",
     "next": "14.1.0",
     "react": "^18",
     "react-bootstrap": "^2.10.0",
@@ -23,9 +25,9 @@
     "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "next": "14.1.0",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "next": "14.1.0"
+    "typescript": "^5"
   }
 }
